# examples

./: .gitignore  LICENSE  README.md
python/: .gitignore  publish-gallery.sh  pyproject.toml
python/apps/OOP_ref/: layout.py  main_with_logic.py
python/apps/authentication/: basic-auth-async.py  basic-auth.py  check-auth-results-and-toggle-ui.py  github-oauth-with-listing-repos-async.py  github-oauth-with-listing-repos.py  linkedin-login.py
python/apps/autocomplete-searcher/: main.py  names.py
python/apps/basic-responsive-menu/: main.py
python/apps/controls-gallery/: Dockerfile  README.md  controls_grid.py  examples_view.py  fly.toml  gallerydata.py  left_navigation_menu.py  main.py  popup_color_item.py  pyproject.toml  requirements.txt
python/apps/counter/: counter-accessible.py  counter-async.py  counter.py
python/apps/counter-flutter/: fly.toml  main.py  requirements.txt
python/apps/custom-loading-image/: main.py
python/apps/declarative/: counter.py  edit-form.py  progress-with-yield.py
python/apps/desktop-window-manager/: page_window.py
python/apps/flet-animation/: main.py
python/apps/fletmail/: fletmail.py  mail_menu.py  main.py  messages.py  mobile_layout.py  mobile_view.py  new_message_view.py  secondary_menu.py  web_layout.py  web_view.py
python/apps/fletogram/: chat.py  fletogram.py  main.py  pyproject.toml
python/apps/icons-browser/: fly.toml  main.py  requirements.txt
python/apps/icons-cupertino-browser/: main.py  requirements.txt
python/apps/layouts/: footer.py
python/apps/reorderablelistview/: 01_reorderablelistview_example.py  index.py
python/apps/routing-navigation/: building-views-on-route-change.py  home-store.py  initial-route.py  route-change-event.py
python/apps/studio-gallery/: audio_player.py  buttons.py  calculator.py  charts.py  counter.py  drawing_tool.py  entry_form.py  flet_animation.py  main.py  to_do.py  to_do_1.py
python/apps/todo/: Dockerfile  fly.toml  requirements.txt  todo-reactive.py  todo.py
python/apps/todo-async/: todo.py
python/apps/trello-clone/: .gitignore  Dockerfile  app.py  app_layout.py  board.py  board_list.py  data_store.py  db.py  fly.toml  item.py  main.py  memory_store.py  repository.py  requirements.txt  sidebar.py  store.py
python/apps/trolli/: DockerFile  README.md  fly.toml  pyproject.toml  requirements.txt
python/community/: drag_n_drop.py
python/community/automatic_image_carousel/: README.md  automatic_carousel.py  example.py
python/community/colors_browser/: README.md  fly.toml  main.py  requirements.txt  v1.py  v2.py
python/community/datepicker/: .gitignore  README.md  example.py  main.py
python/community/datetime_field/: datetime_field.py  readme.md  run.py
python/community/flet_animations/: 16_bubble_loading_animation.py  AppBar_bubbled.py  Circular_loading_animation.py  Horizontal_loading_animation.py  Loading_animation_bubble.py  Sliding_AppBar.py  animted_login_page.py  bouncing_ball_loading.py  dark_light_switch.py  hover_animation.py  navigation_drawer.py  radial_animation.py  square_rotation_animation.py  vertical_loading_animation.py
python/community/floating_menu_button/: menubutton.py
python/community/llama-bot/: README.md  app.py  requirements.txt
python/community/my_project/: pyproject.toml
python/community/responsive_menu_layout/: README.md  responsive_menu_layout.py
python/community/simple_desktop_layout/: simple_desktop_layout.py
python/community/toasts/: example.py  readme.md
python/community/url_shortner/: README.md  urlShortner.py
python/community/weather_widget/: README.md
python/controls/: animate-button-on-hover.py  animate-offset.py  animate-position.py  animate-rotation.py  animate-scale.py  animate-single-container.py  bursting-flet.py  form-controls-misc.py  image-slideshow.py  rocket.py
python/controls/alert-dialog/: dialogs.py
python/controls/animated-switcher/: animate-image-switch-buffered.py  animate-image-switch.py
python/controls/animation/: animate-button-on-hover.py  animate-container.py  animate-image-switch.py  animate-offset.py  animate-opacity.py  animate-position.py  animate-rotation.py  animate-scale-docs.py  animate-scale.py  animate-single-container.py  animated-left-menu.py  animated-switcher.py  bursting-flet.py  image-slideshow.py  rive-basic.py  rocket.py
python/controls/animations/: animate-button-on-hover.py  animate-container.py  animate-offset.py  animate-opacity.py  animate-position.py  animate-rotation.py  animate-scale-docs.py  animate-scale.py  (+6 more)
python/cookbook/: user-control-with-auto-update.py
python/icons-browser/: Dockerfile  README.md  fly.toml  main.py  requirements.txt
(+891 files in other folders)
