
[project]
name = "flet-examples"
version = "0.1.0"
description = "Sample apps for Flet"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "flet[all]==0.28.3",
  "flet-contrib",
]

[tool.uv]
dev-dependencies = [
    "black>=23.3.0,<24.0.0",
    "flet-web",
    "flet-audio",
    "flet-video",
    "flet-flashlight",
    "flet-geolocator",
    "flet-ads",
    "flet-rive",
    "matplotlib",
    "mplfinance",
    "pandas",
    "plotly"
]
