[tool.poetry]
name = "controls-gallery"
version = "0.1.0"
description = "Control gallery app"
authors = ["InesaFitsner <inesa@appveyor.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "controls_gallery"}]

[tool.poetry.dependencies]
python = "^3.8"
flet = "^0.20.0"
flet-contrib = "^2024.1.24"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.25.0"
flet-fastapi = "^0.19.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
