[project]
name = "controls-gallery"
version = "0.1.0"
description = "Control gallery app"
authors = [
    { name = "Flet Devs", email = "hello@flet.dev" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flet==0.26.0",
    "flet-contrib==2024.12.3"
]

[tool.poetry]
packages = [{include = "components"}]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
