[tool.poetry]
name = "fletogram"
version = "0.1.0"
description = "Adaptive telegram-like app for Android and iOS"
authors = ["InesaFitsner <inesa@appveyor.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
