[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Feodor Fitsner", email = "feodor@appveyor.com"},
]
dependencies = [
    "flet>=0.1.28"]
requires-python = ">=3.7"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
