[tool.poetry]
name = "weather-widget"
version = "0.1.0"
description = ""
authors = ["InesaFitsner <inesa@appveyor.com>"]
readme = "README.md"
packages = [{include = "weather_widget"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
